Addición adicional en html y css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <h1>Hola, mundo!</h1>
     <p>Bienvenidos a mi proyecto web</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam magnam assumenda quasi explicabo dignissimos ratione repellat illum quaerat officia est?</p>
     
 </body>
 </html>
